objects/Cart__c.object
<CustomObject>
    <label>Cart</label>
    <nameField>
        <label>Cart  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>carts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Cart__c</fullName>
        <label>Cart #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Id__c</fullName>
        <label>Card Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Cart_Items__c.Amount__c</summarizedField>
        <summaryForeignKey>Cart_Items__c.Cart_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>Cart_Items__c.Quantity__c</summarizedField>
        <summaryForeignKey>Cart_Items__c.Cart_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>